# anomaly_detection

./: .pre-commit-config.yaml  README.md  data.dvc  infer.py  models.dvc  pyproject.toml  train.py
.dvc/: config
.github/workflows/: main.yml
anomaly_detection/: dataset.py  model.py
configs/: config.yaml
