[tool.poetry]
name = "anomaly-detection"
version = "0.1.0"
description = ""
authors = ["Anton Morozov <morozov1101@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "anomaly_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
torch = "^2.1.2"
pandas = "^2.1.4"
numpy = "^1.26.3"
catboost = "^1.2.2"
lightning = "^2.1.3"
imblearn = "^0.0"
hydra-core = "^1.3.2"
dvc-gdrive = "^3.0.1"
dvc = "^3.38.1"
mlflow = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
Flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
